jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      hostNetwork: true 
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
          name: jellyfin
        volumeMounts:
        - name: jellyfin-config-volume
          mountPath: /config
        - name: jellyfin-cache-volume
          mountPath: /cache
        - name: jellyfin-media-volume
          mountPath: /media
        # resources:
        #   requests:
        #     memory: "4096Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "6144Mi"
        #     cpu: "500m"
      volumes:
      - name: jellyfin-config-volume
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: jellyfin-cache-volume
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      - name: jellyfin-media-volume
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      nodeSelector:
        intent: jf
