jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
  - name: jellyfin
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
