jellyfin/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ir
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.dragnet.in`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: letsencrypt-prod
